# bobby-bit

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: lib.rs  main.rs  picker.rs  storage.rs  torrent.rs  utils.rs
src/peer/: bitfield.rs  connection.rs  handshake.rs  manager.rs  message.rs
src/tracker/: http.rs  udp.rs
tmp/: best.rs  http.txt  udp.txt
